--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,7 @@
     "variant": "cpp",
     "istream": "cpp",
     "ostream": "cpp",
-    "ranges": "cpp"
+    "ranges": "cpp",
+    "client_highlevel.h": "c"
   }
 }
