--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,6 +10,7 @@
         "${file}",
         "-lopen62541",
         "-lcpprest",
+        "-lcrypto",
         "-o",
         "${fileDirname}/${fileBasenameNoExtension}"
       ],
